nobase_dist_include_HEADERS = urcu/compiler.h urcu/hlist.h urcu/list.h \
		urcu/rculist.h urcu/rcuhlist.h urcu/system.h urcu/futex.h \
		urcu/uatomic/generic.h urcu/arch/generic.h urcu/wfstack.h \
		urcu/wfqueue.h urcu/rculfstack.h urcu/rculfqueue.h \
		urcu/ref.h urcu/cds.h urcu/urcu_ref.h urcu/urcu-futex.h \
		urcu/uatomic_arch.h urcu/rculfhash.h urcu/wfcqueue.h \
		urcu/lfstack.h urcu/syscall-compat.h \
		urcu/map/urcu-bp.h urcu/map/urcu.h urcu/map/urcu-qsbr.h \
		urcu/static/lfstack.h urcu/static/rculfqueue.h \
		urcu/static/rculfstack.h urcu/static/urcu-bp.h \
		urcu/static/urcu.h urcu/static/urcu-pointer.h \
		urcu/static/urcu-qsbr.h urcu/static/wfcqueue.h \
		urcu/static/wfqueue.h urcu/static/wfstack.h \
		urcu/tls-compat.h urcu/debug.h

# Don't distribute generated headers
nobase_nodist_include_HEADERS = urcu/arch.h urcu/uatomic.h urcu/config.h

EXTRA_DIST = urcu/arch/aarch64.h \
	urcu/arch/alpha.h \
	urcu/arch/arm.h \
	urcu/arch/gcc.h \
	urcu/arch/generic.h \
	urcu/arch/hppa.h \
	urcu/arch/ia64.h \
	urcu/arch/m68k.h \
	urcu/arch/mips.h \
	urcu/arch/nios2.h \
	urcu/arch/ppc.h \
	urcu/arch/s390.h \
	urcu/arch/sparc64.h \
	urcu/arch/tile.h \
	urcu/arch/unknown.h \
	urcu/arch/x86.h \
	urcu/uatomic/aarch64.h \
	urcu/uatomic/alpha.h \
	urcu/uatomic/arm.h \
	urcu/uatomic/gcc.h \
	urcu/uatomic/generic.h \
	urcu/uatomic/hppa.h \
	urcu/uatomic/ia64.h \
	urcu/uatomic/m68k.h \
	urcu/uatomic/mips.h \
	urcu/uatomic/nios2.h \
	urcu/uatomic/ppc.h \
	urcu/uatomic/s390.h \
	urcu/uatomic/sparc64.h \
	urcu/uatomic/tile.h \
	urcu/uatomic/unknown.h \
	urcu/uatomic/x86.h
