nobase_include_HEADERS = \
	urcu/arch/aarch64.h \
	urcu/arch/alpha.h \
	urcu/arch/arm.h \
	urcu/arch/gcc.h \
	urcu/arch/generic.h \
	urcu/arch.h \
	urcu/arch/hppa.h \
	urcu/arch/ia64.h \
	urcu/arch/loongarch.h \
	urcu/arch/m68k.h \
	urcu/arch/mips.h \
	urcu/arch/nios2.h \
	urcu/arch/ppc.h \
	urcu/arch/riscv.h \
	urcu/arch/s390.h \
	urcu/arch/sparc64.h \
	urcu/arch/tile.h \
	urcu/arch/x86.h \
	urcu/assert.h \
	urcu/call-rcu.h \
	urcu/cds.h \
	urcu/compiler.h \
	urcu/debug.h \
	urcu/defer.h \
	urcu/flavor.h \
	urcu/futex.h \
	urcu/hlist.h \
	urcu/lfstack.h \
	urcu/list.h \
	urcu/map/clear.h \
	urcu/map/urcu-bp.h \
	urcu/map/urcu.h \
	urcu/map/urcu-mb.h \
	urcu/map/urcu-memb.h \
	urcu/map/urcu-qsbr.h \
	urcu/map/urcu-signal.h \
	urcu/pointer.h \
	urcu/rcuhlist.h \
	urcu/rculfhash.h \
	urcu/rculfqueue.h \
	urcu/rculfstack.h \
	urcu/rculist.h \
	urcu/ref.h \
	urcu/static/lfstack.h \
	urcu/static/pointer.h \
	urcu/static/rculfqueue.h \
	urcu/static/rculfstack.h \
	urcu/static/urcu-bp.h \
	urcu/static/urcu-common.h \
	urcu/static/urcu.h \
	urcu/static/urcu-mb.h \
	urcu/static/urcu-memb.h \
	urcu/static/urcu-qsbr.h \
	urcu/static/urcu-signal.h \
	urcu/static/urcu-signal-nr.h \
	urcu/static/wfcqueue.h \
	urcu/static/wfqueue.h \
	urcu/static/wfstack.h \
	urcu/syscall-compat.h \
	urcu/system.h \
	urcu/tls-compat.h \
	urcu/uatomic/aarch64.h \
	urcu/uatomic/alpha.h \
	urcu/uatomic_arch.h \
	urcu/uatomic/arm.h \
	urcu/uatomic/gcc.h \
	urcu/uatomic/generic.h \
	urcu/uatomic.h \
	urcu/uatomic/hppa.h \
	urcu/uatomic/ia64.h \
	urcu/uatomic/loongarch.h \
	urcu/uatomic/m68k.h \
	urcu/uatomic/mips.h \
	urcu/uatomic/nios2.h \
	urcu/uatomic/ppc.h \
	urcu/uatomic/riscv.h \
	urcu/uatomic/s390.h \
	urcu/uatomic/sparc64.h \
	urcu/uatomic/tile.h \
	urcu/uatomic/x86.h \
	urcu/urcu-bp.h \
	urcu/urcu-futex.h \
	urcu/urcu.h \
	urcu/urcu-mb.h \
	urcu/urcu-memb.h \
	urcu/urcu-qsbr.h \
	urcu/urcu_ref.h \
	urcu/urcu-signal.h \
	urcu/wfcqueue.h \
	urcu/wfqueue.h \
	urcu/wfstack.h \
	urcu/urcu-poll.h

# Don't distribute generated headers
nobase_nodist_include_HEADERS = urcu/config.h

# Non 'urcu/' prefixed compat headers
include_HEADERS = \
	urcu-qsbr.h \
	urcu-bp.h \
	urcu-call-rcu.h \
	urcu-defer.h \
	urcu-flavor.h \
	urcu.h \
	urcu-pointer.h
